# VPKShellExtensions

./: .gitignore  CMakeLists.txt  VersionInfo.rc.in
release/: readme.txt  register.bat  unregister.bat
src/: Main.cpp  MetadataProvider.cpp  MetadataProvider.h  Module.def  PropVariantSafe.h  ThumbnailProvider.cpp  ThumbnailProvider.h  Utils.cpp  Utils.hpp  VPKReader.cpp  VPKReader.hpp  framework.h  pch.h  resource.h  test.cpp  version.rc
